# scd30-modbus-rs

./: Cargo.toml  README.md
src/: lib.rs
