[package]
name = "scd30-modbus"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>"]
repository = "https://github.com/teamplayer3/scd30-modbus-rs.git"
description = "SCD30 driver implementation"
keywords = ["embedded", "scd30-modbus", "iot", "embedded-hal-driver", "co2"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []
std = []

[dependencies]
embedded-io-async = "0.6.1"
smol = "2.0.0"
